tests/miniJava/neg/000824_mutation.MiniJava
class java { public static void Main ( String [ ] java ) { java = java public int [] java ( ) { return 0 ; } ; } }
